# IC-42078

./: .gitignore  .~lock.ex_1_data_decompressed.ppm#  CMakeLists.txt  README.md  ex_1_data.comp  ex_1_data_decompressed.ppm  notes.txt  setup.sh
PART_1/: CMakeLists.txt  ex_1.cpp  ex_2.cpp
PART_1/sndfile-example-bin/: wav_hist
PART_1/sndfile-example-src/: CMakeLists.txt  wav_cmp.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
PART_2/: BitStream  CMakeLists.txt  bit_stream.cpp  bit_stream.h  ex_3.cpp  golomb.h  input.txt  to_encode.txt
PART_3/: CMakeLists.txt  ex_3
golomb/: golomb.h
include/: CMakeLists.txt  bit_stream.h  compressor1frame.h  compressor_video.h  golomb.h  predictor.h
output/: compressed_file.txt  golomb_encoding_test.txt  output_actual_matrix_comparison.txt  output_residual_matrix_comparison.txt  output_test_decompression.txt
src/: CMakeLists.txt  ex_1.cpp  ex_2.cpp  test_bit_stream.cpp  test_golomb_coding.cpp
